# riscv-emulator-cpp

./: .gitmodules  CMakeLists.txt
include/: common.h  memory.h
src/: main.cpp  memory.cpp
test/: test_memory.cpp
